improved section and topic partition

--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ batch_size = 32
 ; Beam size for decoding (higher improves accuracy, slower)
 beam_size = 5
 ; Compute type for Faster-Whisper (float16, int8, or int8_float16)
-compute_type = float16
+compute_type = int8
 ; Language code to skip auto-detection
 language = es
 
@@ -41,10 +41,10 @@ model_name = ministral-3:3b
 ; Temperature for deterministic structured output
 temperature = 0.0
 ; Context window (tokens) for Ollama
-context_window = 64000
+context_window = 48000
 ; Maximum generated tokens
 num_predict = 16000
-; Image kind stored in the hash database (original or resized)
+; Image kind to use for selection (original or resized)
 image_kind = resized
 ; Image format stored in the hash database
 image_format = jpg
@@ -60,6 +60,7 @@ retry_backoff = 0.5
 [markdown]
 ; Ollama model name for markdown generation
 model_name = gpt-oss:20b
+; model_name = ministral-3:14b
 ; Temperature for deterministic structured output
 temperature = 0.0
 ; Context window (tokens) for Ollama
@@ -70,7 +71,5 @@ num_predict = 32000
 summary_num_predict = 1024
 ; Output language for markdown sections
 language = es
-; Image kind stored in the hash database (original or resized)
-image_kind = original
 ; Image format stored in the hash database
 image_format = jpg
