added more data

--- a/config.ini
+++ b/config.ini
@@ -18,12 +18,13 @@ image_format = jpg
 ; imagehash algorithm: phash, dhash, ahash, whash
 hash_algorithm = phash
 ; Resized keyframe dimensions
-resized_width = 1008
-resized_height = 758
+resized_width = 1260
+resized_height = 700
 
 [topics]
 ; Ollama model name for topic extraction
-model_name = gpt-oss:20b
+; model_name = gpt-oss:20b
+model_name = gemma3:12b
 ; Temperature for deterministic structured output
 temperature = 0.0
 ; Context window (tokens) for Ollama
@@ -34,8 +35,8 @@ num_predict = 16000
 [selection]
 ; Ollama model name for keyframe selection
 ; model_name = qwen3-vl:4b
-; model_name = ministral-3:8b
-model_name = ministral-3:3b
+model_name = ministral-3:8b
+; model_name = ministral-3:3b
 ; model_name = moondream:latest
 ; model_name = granite3.2-vision:2b
 ; Temperature for deterministic structured output
@@ -59,8 +60,8 @@ retry_backoff = 0.5
 
 [markdown]
 ; Ollama model name for markdown generation
-model_name = gpt-oss:20b
-; model_name = ministral-3:14b
+; model_name = gpt-oss:20b
+model_name = gemma3:12b
 ; Temperature for deterministic structured output
 temperature = 0.0
 ; Context window (tokens) for Ollama
